--- a/GameOfThrones/GameOfThrones/Base.lproj/Main.storyboard
+++ b/GameOfThrones/GameOfThrones/Base.lproj/Main.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xt0-oM-DJO">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +11,158 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GameOfThrones" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OX6-YO-ib2">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="oddSeason" rowHeight="191" id="Gm5-iL-tmF" customClass="OddTableViewCell" customModule="GameOfThrones" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="191"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Gm5-iL-tmF" id="j6P-W3-krp">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="191"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ATz-7P-NkQ">
+                                                    <rect key="frame" x="0.0" y="0.0" width="240" height="191"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dGF-WT-bdV">
+                                                    <rect key="frame" x="240" y="11" width="154" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m5w-ua-saU">
+                                                    <rect key="frame" x="240" y="39.5" width="154" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="dGF-WT-bdV" secondAttribute="trailing" id="1HZ-fX-9v4"/>
+                                                <constraint firstItem="m5w-ua-saU" firstAttribute="trailing" secondItem="j6P-W3-krp" secondAttribute="trailingMargin" id="6bv-BL-Won"/>
+                                                <constraint firstAttribute="bottom" secondItem="ATz-7P-NkQ" secondAttribute="bottom" id="AHY-Dn-sdo"/>
+                                                <constraint firstItem="ATz-7P-NkQ" firstAttribute="width" secondItem="j6P-W3-krp" secondAttribute="width" multiplier="0.57971" id="AKr-FT-yvO"/>
+                                                <constraint firstItem="ATz-7P-NkQ" firstAttribute="leading" secondItem="j6P-W3-krp" secondAttribute="leading" id="QI1-Fi-jWm"/>
+                                                <constraint firstItem="m5w-ua-saU" firstAttribute="leading" secondItem="ATz-7P-NkQ" secondAttribute="trailing" id="Skc-Jg-ZLF"/>
+                                                <constraint firstItem="dGF-WT-bdV" firstAttribute="leading" secondItem="ATz-7P-NkQ" secondAttribute="trailing" id="pQM-Eu-5uL"/>
+                                                <constraint firstItem="dGF-WT-bdV" firstAttribute="top" secondItem="j6P-W3-krp" secondAttribute="topMargin" id="puT-Fm-9o3"/>
+                                                <constraint firstItem="m5w-ua-saU" firstAttribute="top" secondItem="dGF-WT-bdV" secondAttribute="bottom" constant="8" id="qIr-v7-jaM"/>
+                                                <constraint firstItem="ATz-7P-NkQ" firstAttribute="top" secondItem="j6P-W3-krp" secondAttribute="top" id="rag-W5-geq"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="oddCellImage" destination="ATz-7P-NkQ" id="4yt-oq-rnc"/>
+                                            <outlet property="oddEpisodeLabel" destination="m5w-ua-saU" id="cX3-6a-ST7"/>
+                                            <outlet property="oddTitleLabel" destination="dGF-WT-bdV" id="aEV-8R-l5h"/>
+                                            <segue destination="jbp-Qq-JaV" kind="show" id="QQX-dM-MyK"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="evenSeason" rowHeight="199" id="wNu-3a-SOo" customClass="EvenTableViewCell" customModule="GameOfThrones" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="219" width="414" height="199"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wNu-3a-SOo" id="5g7-hY-7at">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="199"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qDq-xp-vAh">
+                                                    <rect key="frame" x="154" y="11" width="240" height="177"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wej-MR-75h">
+                                                    <rect key="frame" x="0.0" y="0.0" width="154" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2C2-3g-vO2">
+                                                    <rect key="frame" x="0.0" y="28.5" width="154" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="qDq-xp-vAh" firstAttribute="trailing" secondItem="5g7-hY-7at" secondAttribute="trailingMargin" id="3le-13-m6z"/>
+                                                <constraint firstItem="2C2-3g-vO2" firstAttribute="top" secondItem="Wej-MR-75h" secondAttribute="bottom" constant="8" id="DT0-C0-NjU"/>
+                                                <constraint firstItem="2C2-3g-vO2" firstAttribute="leading" secondItem="5g7-hY-7at" secondAttribute="leading" id="E1c-uQ-MEQ"/>
+                                                <constraint firstItem="qDq-xp-vAh" firstAttribute="leading" secondItem="2C2-3g-vO2" secondAttribute="trailing" id="Esa-dU-dtR"/>
+                                                <constraint firstItem="Wej-MR-75h" firstAttribute="top" secondItem="5g7-hY-7at" secondAttribute="top" id="GhD-BF-Wq9"/>
+                                                <constraint firstItem="qDq-xp-vAh" firstAttribute="width" secondItem="5g7-hY-7at" secondAttribute="width" multiplier="0.57971" id="Wdn-Dt-6Or"/>
+                                                <constraint firstItem="Wej-MR-75h" firstAttribute="leading" secondItem="5g7-hY-7at" secondAttribute="leading" id="evE-Tm-Xya"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="qDq-xp-vAh" secondAttribute="bottom" id="guh-zZ-miM"/>
+                                                <constraint firstItem="qDq-xp-vAh" firstAttribute="top" secondItem="5g7-hY-7at" secondAttribute="topMargin" id="jfO-SP-kP5"/>
+                                                <constraint firstItem="qDq-xp-vAh" firstAttribute="leading" secondItem="Wej-MR-75h" secondAttribute="trailing" id="rxd-7s-63V"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="evenEpisodeLabel" destination="2C2-3g-vO2" id="So7-ZZ-WhN"/>
+                                            <outlet property="evenSeasonImage" destination="qDq-xp-vAh" id="UrS-U5-hWa"/>
+                                            <outlet property="evenTitleLabel" destination="Wej-MR-75h" id="8ae-1f-JL5"/>
+                                            <segue destination="jbp-Qq-JaV" kind="show" id="myN-Pe-c3R"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="OX6-YO-ib2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Evw-uU-V16"/>
+                            <constraint firstItem="OX6-YO-ib2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="g5j-z7-ejQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OX6-YO-ib2" secondAttribute="trailing" id="hRB-HV-wxF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="OX6-YO-ib2" secondAttribute="bottom" id="xsw-uq-43W"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="veo-hl-aI3"/>
+                    <connections>
+                        <outlet property="gotTableView" destination="OX6-YO-ib2" id="vpi-dd-QM3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1047.8260869565217" y="126.5625"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="9Ro-mD-ucs">
+            <objects>
+                <viewController id="jbp-Qq-JaV" customClass="DetailViewController" customModule="GameOfThrones" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Med-xF-jbo">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="Cau-9T-ygN"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="wIC-qf-BFH"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EyG-i3-ZVG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1870" y="137"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ll7-Pt-J7b">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xt0-oM-DJO" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="47W-QA-uB6">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="kPN-Dy-pC8"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OkL-he-Q6t" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="126.5625"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="QQX-dM-MyK"/>
+    </inferredMetricsTieBreakers>
 </document>
